# acpi-driver

./: .gitignore  README.md  meson.build
include/: common.h  config.h.in
include/acpi/: tables.h
include/acpi/aml/: aml_types.h  aot_node.h  opcodes.h  parse.h
include/linux/: dump.h
include/types/: tree.h
source/: main.cpp
source/acpi/: tables.cpp
source/acpi/aml/: aml_types.cpp  parse.cpp
source/linux/: dump.cpp
